2007-11-12  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	First fix to treeview rows

2007-11-12  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_focus):
	* engines/clearlooks/src/clearlooks_types.h:

	Detect treeview row focus drawing and the position of the focus.

2007-11-10  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_toolbar):
	A fix in the cairo drawing (0.5 misalignment)
	
	* engines/support/cairo-support.c: (ge_cairo_rounded_corner):
	* engines/support/ge-support.h:
	* engines/support/general-support.h:
	* engines/support/widget-information.c:
	whitespaces

2007-11-08  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	Added boolean stroke_focus (useless now)

2007-11-08  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	Changes in the pattern

2007-11-08  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_focus):
	Comments and non-breaking things

2007-11-08  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_focus):
	* engines/clearlooks/src/clearlooks_types.h:
	* themes/Clearlooks/gtk-2.0/gtkrc:
	Other types added to focus
	Fixed progressbar and menuseparator problems in the gtkrc
	(as Benjamin suggested that was related to the order)

2007-11-08  Andrea Cimitan  <andrea.cimitan@gmail.com>
